@@ -7,6 +7,12 @@
                                   Changelog
 
 Daniel Stenberg (30 Jul 2008)
+- Phil Blundell added the CURLOPT_SCOPE option, as well as adjusted the URL
+  parser to allow numerical IPv6-addresses to be specified with the scope
+  given, as per RFC4007 - with a percent letter that itself needs to be URL
+  escaped. For example, for an address of fe80::1234%1 the HTTP URL is:
+  "http://[fe80::1234%251]/"
+
 - PHP's bug report #43158 (http://bugs.php.net/bug.php?id=43158) identifies a
   true bug in libcurl built with OpenSSL. It made curl_easy_getinfo() more or
   less always return 0 for CURLINFO_SSL_VERIFYRESULT because the function that
